--- a/javascript/part12_Dom_Bomjs/index.html
+++ b/javascript/part12_Dom_Bomjs/index.html
@@ -13,6 +13,6 @@
 </head>
 <body>
     <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h1>
-    <script defer src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
