--- a/javascript/projects/proj/index.html
+++ b/javascript/projects/proj/index.html
@@ -7,17 +7,22 @@
         <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
-        <div class="container">
-            <h1>To-Do List</h1>
-                <div class="input-container">
-                    <input type="text" id="todo-input" placeholder="Add a new task ..."/>
-                    <button id="add-task-btn">Add Task</button>
-                </div>
-            <ul id="todo-list">
-                <!-- <li>test
-                    <button class="delete-btn">Delete</button>
-                </li> -->
-            </ul>
+        <div class="containermain">
+            <div class="head1">
+                <h2>To-Do List</h2>
+            </div>
+            <div class="container">
+                <h1>To-Do List</h1>
+                    <div class="input-container">
+                        <input type="text" id="todo-input" placeholder="Add a new task ..."/>
+                        <button id="add-task-btn">Add Task</button>
+                    </div>
+                <ul id="todo-list">
+                    <!-- <li>test
+                        <button class="delete-btn">Delete</button>
+                    </li> -->
+                </ul>
+            </div>
         </div>
     <script src="script.js"></script>
     </body>
